<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_label"
        android:text="@string/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_packages"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/tv_label"
        android:hint="@string/et_packages_hint"
        android:lines="3"/>
    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_packages"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_update_widget" />
    <TextView
        android:id="@+id/tv_help"
        android:text="@string/tv_help"
        android:layout_width="wrap_content"
        android:layout_below="@id/btn_update"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_about_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/tv_about_dev" />
    <TextView
        android:id="@+id/tv_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_about_dev"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
